--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.29
+        args: --timeout=3m
+
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
